--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ Students will build upon knowledge of typographic strategies and design sensibil
 
       <button class="accordion"><li>Quick Links</li></button>
       <div class="panel">
-        <p>
-          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
-          <a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a><br>
-          <a href="https://docs.google.com/document/d/1kfGGR3mocZeJtDyF3cSjNQg5UVgV6RG3hWzf2U99NIk/edit?usp=sharing" target="_blank">Group Agreement</a><br>
-          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022" target="_blank">Are.na</a><br>
-        </p>
+        <pre>
+<a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
+<a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a>
+<a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a>
+<a href="https://docs.google.com/document/d/1kfGGR3mocZeJtDyF3cSjNQg5UVgV6RG3hWzf2U99NIk/edit?usp=sharing" target="_blank">Group Agreement</a>
+<a href="https://www.are.na/pmcd-5002-section-b-spring-2022" target="_blank">Are.na</a>
+        </pre>
       </div>
 
       <button class="accordion"><li>People</li></button>
@@ -758,18 +758,18 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           However! I would recommend continuing to type this out by hand until each element is locked away in your memory instead of just copy-pasting every time!
         </p>
-    <pre>
-      &lt;html lang="en"&gt;
-        &lt;head&gt;
-          &lt;title&gt;TITLE&lt;/title&gt;
-          &lt;meta charset="utf-8"&gt;
-          &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-          &lt;link rel="stylesheet" href="style.css"&gt;
-        &lt;/head&gt;
+    <pre class="codeblock">
+&lt;html lang="en"&gt;
+  &lt;head&gt;
+    &lt;title&gt;TITLE&lt;/title&gt;
+    &lt;meta charset="utf-8"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+    &lt;link rel="stylesheet" href="style.css"&gt;
+  &lt;/head&gt;
 
-        &lt;body&gt;
-        &lt;/body&gt;
-      &lt;/html&gt;
+  &lt;body&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
     </pre>
         <p>
           <em>This text was written by Aidan Quinlan.</em>
