--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <ol>
       <button class="accordion"><li>Introduction</li></button>
       <div class="panel">
-        <pre>
-The web is a permeable space that in return informs our everyday lives. We log on to search for instruction and to connect with others. In doing so, we leave traces of ourselves that influence our offline world. How do we experience the internet mindfully as weaving between these spaces becomes increasingly second nature? In this course, we will explore this movement as a means of making and inquiring.
-
-Students will build upon knowledge of typographic strategies and design sensibilities through the introduction of the foundational, front-end languages HTML, CSS, and JavaScript. Throughout the semester, we will consider how websites navigate, archive, and transform through projects, discussions, and guest visits that help us build criticality towards our digital and physical present and future.
-        </pre>
+        <p>
+          The web is a permeable space that in return informs our everyday lives. We log on to search for instruction and to connect with others. In doing so, we leave traces of ourselves that influence our offline world. How do we experience the internet mindfully as weaving between these spaces becomes increasingly second nature? In this course, we will explore this movement as a means of making and inquiring.
+          <br><br>
+          Students will build upon knowledge of typographic strategies and design sensibilities through the introduction of the foundational, front-end languages HTML, CSS, and JavaScript. Throughout the semester, we will consider how websites navigate, archive, and transform through projects, discussions, and guest visits that help us build criticality towards our digital and physical present and future.
+        </p>
       </div>
 
       <button class="accordion"><li>Quick Links</li></button>
       <div class="panel">
-        <pre>
-<a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
-<a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a>
-<a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a>
-<a href="https://docs.google.com/document/d/1kfGGR3mocZeJtDyF3cSjNQg5UVgV6RG3hWzf2U99NIk/edit?usp=sharing" target="_blank">Group Agreement</a>
-<a href="https://www.are.na/pmcd-5002-section-b-spring-2022" target="_blank">Are.na</a>
-        </pre>
+        <p>
+          <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
+          <a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a><br>
+          <a href="https://docs.google.com/document/d/1kfGGR3mocZeJtDyF3cSjNQg5UVgV6RG3hWzf2U99NIk/edit?usp=sharing" target="_blank">Group Agreement</a><br>
+          <a href="https://www.are.na/pmcd-5002-section-b-spring-2022" target="_blank">Are.na</a>
+        </p>
       </div>
 
       <button class="accordion"><li>People</li></button>
@@ -137,8 +137,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
-            - <a href="" download>HTML Practice</a> (optional)
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
             <br><br>
             Project:<br>
             - <a href="" target="_blank">Prepare Walk Presentations</a>
@@ -163,8 +162,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
             Next Class:<br>
             - Read <a href="assets/readings/michaelson.pdf" target="_blank">On Exactitude in Science</a>, Dan Michaelson<br>
             - Read <a href="https://unbag.net/end/black-gooey-universe" target="_blank">Black Gooey Universe</a>, Amerian Artist<br>
-            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a><br>
-            - <a href="" download>CSS Practice</a> (optional)
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
             <br><br>
             Project:<br>
             - Sketch 2-3 directions
@@ -185,8 +183,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
-            - <a href="" download>CSS Positioning Practice</a> (optional)
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
             <br><br>
             Project:<br>
             - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a>  for WIP Critiques<br>
@@ -207,8 +204,6 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            <a href="" download>Flexbox Practice</a> (optional)
-            <br><br>
             Project:<br>
             - <a href="" target="_blank">Path Critique</a><br>
             <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.</em>
@@ -303,8 +298,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
-            - <a href="" download>JS Practice</a> (optional)
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
           </span>
         </p>
       </div>
@@ -335,6 +329,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <span class="nextclass">
             Next Class:<br>
             - Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="_blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
+            - Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
             <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
             <br><br>
             Project:<br>
@@ -377,11 +372,8 @@ Students will build upon knowledge of typographic strategies and design sensibil
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
-            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
-            <br><br>
-            Project:<br>
-            - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a> for WIP Critiques<br>
+            - Query Critique<br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.</em>
           </span>
         </p>
       </div>
@@ -390,16 +382,13 @@ Students will build upon knowledge of typographic strategies and design sensibil
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a>
-          <br><br>
-          ✳ break ✳
-          <br><br>
-          - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">WIP Critiques</a>
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
+          - Query Critique
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Query Critique<br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.</em>
+            - Page<br>
+            <em>Ensure your personal page is updated with links to all of your projects and exercises.</em>
           </span>
         </p>
       </div>
@@ -409,7 +398,6 @@ Students will build upon knowledge of typographic strategies and design sensibil
         <p>
           In Class:<br>
           Exercise: Update<br>
-          Query Critique<br>
         </p>
       </div>
 
@@ -580,7 +568,7 @@ Students will build upon knowledge of typographic strategies and design sensibil
         <button class="accordion"><li>Page</li></button>
         <div class="panel">
           <p>
-            Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects, exercises, and Practice for later reference and grading.
+            Using the page from the Daisy Chain exercise, you will create a personal site to house links to your projects and exercises for later reference and grading.
             <br><br>
             Remember to keep it updated as you work.
           </p>
@@ -715,22 +703,6 @@ Students will build upon knowledge of typographic strategies and design sensibil
         </ol>
       </div>
 
-
-      <!-- Practice Subsection
-      ------------------------------------------------------------------------------->
-      <button class="accordion"><li>Practice</li></button>
-      <div class="panel">
-        <p>
-          All practice assignments are optional but highly suggested as they provide additional practice for what we learned in class that day.
-          <br><br>
-          - <a href="" download>HTML Practice</a><br>
-          - <a href="" download>CSS Practice</a><br>
-          - <a href="" download>CSS Positioning Practice</a><br>
-          - <a href="" download>Flexbox Practice</a><br>
-          - <a href="" download>Media Query Practice</a><br>
-          - <a href="" download>JS Practice</a><br>
-        </p>
-      </div>
 
       </ol>
     </li>
