--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            - Archive Critique<br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
           </span>
         </p>
       </div>
@@ -307,13 +308,14 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
+          - Introduce Project 3: Query<br>
+          - Archive Critique
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Archive Critique<br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
           </span>
         </p>
       </div>
@@ -323,8 +325,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - Introduce Project 3: Query<br>
-          - Archive Critique
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -334,7 +336,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             <br><br>
             Project:<br>
             - Interview Review<br>
-            -  Questions
+            - Questions
           </span>
         </p>
       </div>
@@ -364,10 +366,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
-          <br><br>
-          ✳ break ✳
-          <br><br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
           - Work Session
           <br><br>
           <span class="nextclass">
@@ -397,7 +396,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          Exercise: Update<br>
+          - Exercise: Update<br>
         </p>
       </div>
 
