--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Introductions<br>
           - Group Agreement<br>
           - Syllabus and Class Overview<br>
-          - What is WWW?
+          - <a href="https://docs.google.com/presentation/d/1LEySqdbmwMVH41aFYtk54VjuyLN9BVUxeSL0QK0hrKE/edit#slide=id.geded19efc4_0_0" target="_blank">What is WWW?</a>
           <br><br>
           ✳ break ✳
           <br><br>
