--- a/index.html
+++ b/index.html
@@ -587,11 +587,11 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
               DOWNLOADS:<br>
               1. Create a  <a href="https://github.com/" target="_blank">Github account</a>. Make sure you verify your e-mail.<br>
               2. Download the <a href="https://atom.io/" target="_blank">Atom Text Editor</a>.<br>
-              4. Download the <a href="assets/downloads/YourNameHere-ClassSite.zip" download>Page Template</a>.<br>
+              4. Download the <a href="assets/downloads/ClassSiteTemplate.zip" download>Page Template</a>.<br>
               3. Download the <a href="https://desktop.github.com/" target="_blank">Github Desktop app</a>.
               <br><br>
               SET UP:<br>
-              X. Add the URL of your page to this <a href="" target="_blank">list</a>.
+              Add the URL of your page to this <a href="https://docs.google.com/document/d/1jhStQGlA0xa8Y2Xx5fydQ9K8AuM3H_3qRy1tNSXOD_c/edit" target="_blank">list</a>.
             </p>
           </div>
 
