--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Read <a href="" target="_blank">Handmade Web</a>, J.R. Carpenter<br>
+            - Read <a href="http://luckysoap.com/statements/handmadeweb.html" target="_blank">Handmade Web</a>, J.R. Carpenter<br>
             - Read <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/" target="_blank">What is Code?</a>, Paul Ford<br>
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
           </span>
@@ -587,10 +587,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
               DOWNLOADS:<br>
               1. Create a  <a href="https://github.com/" target="_blank">Github account</a>. Make sure you verify your e-mail.<br>
               2. Download the <a href="https://atom.io/" target="_blank">Atom Text Editor</a>.<br>
-              4. Download the <a href="assets/downloads/ClassSiteTemplate.zip" download>Page Template</a>.<br>
-              3. Download the <a href="https://desktop.github.com/" target="_blank">Github Desktop app</a>.
+              3. Download the <a href="assets/downloads/ClassSiteTemplate.zip" download>Page Template</a>.<br>
+              4. Download the <a href="https://desktop.github.com/" target="_blank">Github Desktop app</a>.
               <br><br>
-              SET UP:<br>
               Add the URL of your page to this <a href="https://docs.google.com/document/d/1jhStQGlA0xa8Y2Xx5fydQ9K8AuM3H_3qRy1tNSXOD_c/edit" target="_blank">list</a>.
             </p>
           </div>
