--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             Next Class:<br>
             - Read <a href="http://luckysoap.com/statements/handmadeweb.html" target="_blank">Handmade Web</a>, J.R. Carpenter<br>
             - Read <a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/" target="_blank">What is Code?</a>, Paul Ford<br>
+            - <a href="assets/readings/ford.pdf" target="_blank">Alternate PDF for What is Code?</a><br>
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
           </span>
         </p>
