--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <button class="accordion"><li>People</li></button>
       <div class="panel">
         <p>
-          <img src="assets/images/favicon.ico" style="max-height: .75em; max-width: .75em;">
-          <a>Console Randomizer</a>
+          <a id="randomizer">Console Randomizer</a>
           <br><br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)<br>
-          <a href="" target="_blank">Firstname Lastname</a> (pronouns)
+          <a href="https://agark684.github.io/interaction/" target="_blank">Krishangi Agarwal</a> (she/her)<br>
+          <a href="https://liambrettenny.github.io/interaction/" target="_blank">Liam Brettenny</a> (he/him)<br>
+          <a href="" target="_blank">Jess Chen</a> ( )<br>
+          <a href="http://antoinettechow.com/interaction/" target="_blank">Antoinette Chow</a> (she/her)<br>
+          <a href="https://mads1208.github.io/Interaction/" target="_blank">Madhu Gengatheran Kandasami</a> (she/her)<br>
+          <a href="" target="_blank">Amy Jongjitt</a> (she/her)<br>
+          <a href="https://bryanisab0t.github.io/interaction/" target="_blank">Bryan Oh</a> (he/him)<br>
+          <a href="https://soyoungg0429.github.io/interaction/" target="_blank">So Young Park</a> (she/her)<br>
+          <a href="https://giolla97.github.io/Interaction/" target="_blank">Giordana Pulpo</a> (she/her)<br>
+          <a href="https://mfquevedo.github.io/interaction/" target="_blank">Maria Quevedo Acuna</a> (she/her)<br>
+          <a href="https://carlasunji.github.io/interaction/" target="_blank">Carla Sunji</a> (she/her)<br>
+          <a href="https://thaotycx.github.io/interaction/" target="_blank">Thao Tran</a> (she/her)<br>
+          <a href="https://ashleyezhang.github.io/interaction/" target="_blank">Ashley Zhang</a> (she/her)
           <br><br>
           <a href="https://tuanpham.info" target="_blank">Tuan Quoc Pham</a> (he/him), Instructor<br>
           phamt@newschool.edu
@@ -980,7 +980,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Sun Dec 5, 2021
+    Last Updated: Sat Jan 29, 2022
   </footer>
 
 
