--- a/index.html
+++ b/index.html
@@ -128,13 +128,14 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           In Class:<br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
           - Introduce Project 1: Path<br>
-          - <a href="" target="_blank">HTML: Basics</a>
+          - <a href="https://type-and-interaction-too.notion.site/Basic-HTML-Lecture-1c15d337e1454b9fad62bd0b67c5e3ef" target="_blank">HTML: Basics</a>
           <br><br>
           ✳ break ✳
           <br><br>
           - Introduce <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
           - <a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a><br>
-          - Exercise: Top 10
+          - Exercise: <a href="https://type-and-interaction-too.notion.site/Top-10-348ae7844a584852a9ae58d4d85ccd7e" target="_blank">Top 10</a><br>
+          Download <a href="assets/downloads/Top10.zip" target="_blank">this zip</a> to get started.<br>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -626,50 +627,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           </p>
         </div>
 
-        <button class="accordion"><li>Top 10</li></button>
-        <div class="panel">
-          <p>
-            Compile a personal top 10 list. These should be ten things that inspire you, that you're interested in right now, or that make you want to be an artist/designer. It could have a theme, or no theme. It's a self-portrait in the form of a list. We'll use this as a way to introduce each other, and to get started coding.
-            <br><br>
-            Once you have your list, make a webpage for your top 10. Use this as a chance to experiment with a variety of HTML tags, and to see what kind of layouts are possible with just HTML. You might want to make more than one version...
-            <br><br>
-            Some tags you might want to use:
-            <code>&lt;ol&gt;</code> aka ordered list. This makes a numbered list of items. Use it like this:
-    <pre class="codeblock">
-  &lt;ol&gt;
-    &lt;li&gt;
-        My favorite color is blue.
-    &lt;/li&gt;
-    &lt;li&gt;
-        My second favorite color is light blue.
-    &lt;/li&gt;
-  &lt;/ol&gt;
-    </pre>
-          </p>
-          <p>
-            <code>&lt;a&gt;</code> Use an anchor tag to make a link.<br>
-            For an external link, include the <code>https://</code><br>
-    <pre class="codeblock">
-  &lt;a href="https://www.youtube.com/watch?v=XJcXjUB0yqY"&gt;Watch my favorite music video on Youtube.&lt;/a&gt;
-    </pre>
-          <p>
-            To link to another page on your own website, just use the filepath:
-    <pre class="codeblock">
-  &lt;a href="my-favorite-music-video.html"&gt;Read my explanation of my favorite music video&lt;/a&gt;
-    </pre>
-          </p>
-          <p>
-            Use an image tag to insert an image. Replace myimage.png with your image's file name.<br>
-            <code>&lt;img src="myimage.png"&gt;</code>
-            <br><br>
-            <code>&lt;br&gt;</code> creates a line break in text.<br>
-            <code>&amp;nbsp</code> will add a space to your document. It stands for non-breaking space, and you can use it to position elements.<br>
-            <br><br>
-            <a href="https://www.w3schools.com/tags/default.asp">Browse this list of every tag.</a>
-            <br><br>
-            <em>This exercise was created by Rosa McElheny.</em>
-          </p>
-        </div>
+        <button class="accordion"><li><a href="https://type-and-interaction-too.notion.site/Top-10-348ae7844a584852a9ae58d4d85ccd7e" target="_blank">Top 10</a></li></button>
 
         <button class="accordion"><li>Navigation</li></button>
         <div class="panel">
@@ -980,7 +938,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Sat Jan 29, 2022
+    Last Updated: Sat Jan 30, 2022
   </footer>
 
 
