--- a/index.html
+++ b/index.html
@@ -135,14 +135,17 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Introduce <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share</a><br>
           - <a href="https://docs.google.com/document/d/19cNLsHj5rdBegJmbX_wqoIAU5dOcasnfZKzEWjmCsnw/edit?usp=sharing" target="_blank">Web Share Sign Up</a><br>
           - Exercise: <a href="https://type-and-interaction-too.notion.site/Top-10-348ae7844a584852a9ae58d4d85ccd7e" target="_blank">Top 10</a><br>
-          Download <a href="assets/downloads/Top10.zip" target="_blank">this zip</a> to get started.<br>
+          <em>Download <a href="assets/downloads/Top10.zip" target="_blank">this zip</a> to get started.</em>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
             <br><br>
             Project:<br>
-            - <a href="" target="_blank">Prepare Walk Presentations</a>
+            - <a href="" target="_blank">Prepare Walk Presentations</a><br>
+            <em>- Add your presentation to this <a href="https://docs.google.com/presentation/d/1frc3SBCpSP18tmrRqKA8-cWBUlWqeop9EISMwg6hjNQ/edit#slide=id.p" target="_blank">document</a>.<br>
+            - Have at least 10 slides sharing the things you noticed on your walk.<br>
+            - At least 3 possible platforms you could include and why.</em>
           </span>
         </p>
       </div>
