--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
             <br><br>
             Project:<br>
-            - <a href="" target="_blank">Prepare Walk Presentations</a><br>
+            - Prepare Walk Presentations<br>
             <em>- Add your presentation to this <a href="https://docs.google.com/presentation/d/1frc3SBCpSP18tmrRqKA8-cWBUlWqeop9EISMwg6hjNQ/edit#slide=id.p" target="_blank">document</a>.<br>
             - Have at least 10 slides sharing the things you noticed on your walk.<br>
             - At least 3 possible platforms you could include and why.</em>
