--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: María, Ashley, Carla</a>
             <br><br>
             Project:<br>
             - Prepare Walk Presentations<br>
@@ -154,7 +154,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: María, Ashley, Carla</a><br>
           - <a href="" target="_blank">Walk Presentations</a><br>
           - Exercise: <a href="" target="_blank">Navigation</a>
           <br><br>
@@ -188,7 +188,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Antoinette, Madhu, Bryan</a>
             <br><br>
             Project:<br>
             - <a href="https://docs.google.com/document/d/1n92t3SKq-7l-Pq_34xYSbqB7fsXFpXmTqFnQ6Asoq2M/edit?usp=sharing" target="_blank">Sign up</a>  for WIP Critiques<br>
@@ -200,7 +200,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Antoinette, Madhu, Bryan</a><br>
           - <a href="" target="_blank">CSS 3: Flexbox and Media Query</a>
           <br><br>
           ✳ break ✳
@@ -249,7 +249,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <span class="nextclass">
             Next Class:<br>
             - <a href="" target="_blank">Midterm Survey</a><br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a>
             <br><br>
             Project:<br>
             - Collection Presentation<br>
@@ -271,7 +271,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a><br>
           - Collection Presentations and Swap
           <br><br>
           ✳ break ✳
@@ -318,7 +318,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
             - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           </span>
         </p>
@@ -329,6 +329,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
           - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           <br><br>
           <span class="nextclass">
@@ -395,7 +396,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         </p>
       </div>
 
-      <button class="accordion"><li>Class 15 (Final), May 10</li></button>
+      <button class="accordion"><li>Class 15 (Final), May 11</li></button>
       <div class="panel">
         <p>
           In Class:<br>
